/*
    Copyright 2019-2025 (c) Perpetual Intelligence L.L.C. All Rights Reserved.

    For license, terms, and data policies, go to:
    https://terms.perpetualintelligence.com/articles/intro.html
*/

syntax = "proto3";

option csharp_namespace = "OneImlx.Terminal.AspNetCore";

// The OneImlx terminal router command service to request the command.
service TerminalGrpcRouterProto {
    // Routes a command asynchronously.
    rpc RouteCommand (TerminalGrpcRouterProtoInput) returns (TerminalGrpcRouterProtoOutput);
}

// The terminal router command request.
message TerminalGrpcRouterProtoInput {
    // The raw command or a batch of commands.
    string Raw = 1;
}

// The terminal router command request.
message TerminalGrpcRouterProtoOutput {
    string Response = 1;
}
